force-app/main/default/objects/Document_management__c/Document_management__c.object-meta.xml
<CustomObject>
    <label>書類管理依頼</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>書類管理依頼No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>