force-app/main/default/objects/Document_management__c/fields/Authorizer__c.field-meta.xml
<CustomField>
    <fullName>Authorizer__c</fullName>
    <formula>IF ( NOT(   ISBLANK(Opportunity_DocManagement__c) ) ,  Opportunity_DocManagement__r.Authorizer__r.LastName &amp; &quot; &quot; &amp; Opportunity_DocManagement__r.Authorizer__r.FirstName ,
  Case__r.Authorizer__r.LastName  &amp; &quot; &quot; &amp;  Case__r.Authorizer__r.FirstName  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>承認者</label>
    <type>Text</type>
</CustomField>