force-app/main/default/objects/Document_management__c/fields/AutomobileInspectionApplication_Approved__c.field-meta.xml
<CustomField>
    <fullName>AutomobileInspectionApplication_Approved__c</fullName>
    <formula>OR(Opportunity_DocManagement__r.AutomobileInspectionApplication_Approved__c , CallA_Opportunity_DocMgmt__r.AutomobileInspectionApp_Approved_CallA__c , Case__r.AutomobileInspectionApp_Approved__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>現在登録申請承認済み</label>
    <type>Checkbox</type>
</CustomField>