force-app/main/default/objects/Document_management__c/fields/branch__c.field-meta.xml
<CustomField>
    <fullName>branch__c</fullName>
    <description>所有者のユーザー情報にある部署を表示。山本</description>
    <formula>Owner:User.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>所有者のユーザー情報にある部署を表示する</inlineHelpText>
    <label>部署</label>
    <type>Text</type>
</CustomField>