force-app/main/default/objects/Document_management__c/fields/CallA_Opportunity_DocMgmt__c.field-meta.xml
<CustomField>
    <fullName>CallA_Opportunity_DocMgmt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>コールA商談</label>
    <referenceTo>CallCenterA_Opportunity__c</referenceTo>
    <relationshipLabel>書類管理依頼</relationshipLabel>
    <relationshipName>CallA_Opportunity_DocMgmt</relationshipName>
    <type>Lookup</type>
</CustomField>