force-app/main/default/objects/Document_management__c/fields/cancel__c.field-meta.xml
<CustomField>
    <fullName>cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>長谷川</description>
    <label>キャンセル</label>
    <type>Checkbox</type>
</CustomField>