force-app/main/default/objects/Document_management__c/fields/Car_model__c.field-meta.xml
<CustomField>
    <fullName>Car_model__c</fullName>
    <label>車名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>