force-app/main/default/objects/Document_management__c/fields/Car_No__c.field-meta.xml
<CustomField>
    <fullName>Car_No__c</fullName>
    <label>車台番号</label>
    <length>50</length>
    <type>Text</type>
</CustomField>