force-app/main/default/objects/Document_management__c/fields/collection_date__c.field-meta.xml
<CustomField>
    <fullName>collection_date__c</fullName>
    <formula>Opportunity_DocManagement__r.CollectionDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>書類揃い予定日</label>
    <type>Date</type>
</CustomField>