force-app/main/default/objects/Document_management__c/fields/DeliverySource__c.field-meta.xml
<CustomField>
    <fullName>DeliverySource__c</fullName>
    <description>山本</description>
    <label>送り主</label>
    <type>TextArea</type>
</CustomField>