force-app/main/default/objects/Document_management__c/fields/doc_mgmt_inquiry__c.field-meta.xml
<CustomField>
    <fullName>doc_mgmt_inquiry__c</fullName>
    <description>書類管理からの問い合わせフローで使用。山本</description>
    <label>問い合わせカテゴリ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>入電</fullName>
            </value>
            <value>
                <fullName>登録書類の不備</fullName>
            </value>
            <value>
                <fullName>登録書類の住所相違</fullName>
            </value>
            <value>
                <fullName>未着連絡</fullName>
            </value>
            <value>
                <fullName>付属品の不備・未着</fullName>
            </value>
            <value>
                <fullName>台帳未作成</fullName>
            </value>
            <value>
                <fullName>不要書類の対応確認</fullName>
            </value>
            <value>
                <fullName>還付手続き書類の不備・未着</fullName>
            </value>
            <value>
                <fullName>処理区分確認</fullName>
            </value>
            <value>
                <fullName>所有権解除書類の不備・未着</fullName>
            </value>
            <value>
                <fullName>残債確認の回答結果</fullName>
            </value>
            <value>
                <fullName>車庫申請依頼</fullName>
            </value>
            <value>
                <fullName>現在登録証明発行依頼</fullName>
            </value>
            <value>
                <fullName>陸自手続き</fullName>
            </value>
            <value>
                <fullName>進捗確認</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>名変後車検証</fullName>
                <isActive>false</isActive>
                <label>名変後車検証</label>
            </value>
            <value>
                <fullName>自賠未着連絡</fullName>
                <isActive>false</isActive>
                <label>自賠未着連絡</label>
            </value>
            <value>
                <fullName>還付手続き書類の不備</fullName>
                <isActive>false</isActive>
                <label>還付手続き書類の不備</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>