force-app/main/default/objects/Document_management__c/fields/DocManagement_Name__c.field-meta.xml
<CustomField>
    <fullName>DocManagement_Name__c</fullName>
    <label>担当者</label>
    <length>20</length>
    <type>Text</type>
</CustomField>