force-app/main/default/objects/Document_management__c/fields/Docmgmt_memo__c.field-meta.xml
<CustomField>
    <fullName>Docmgmt_memo__c</fullName>
    <description>長谷川</description>
    <label>書類管理備考欄</label>
    <type>TextArea</type>
</CustomField>