force-app/main/default/objects/Document_management__c/fields/DocOpen_Reason__c.field-meta.xml
<CustomField>
    <fullName>DocOpen_Reason__c</fullName>
    <description>山本</description>
    <label>開封理由</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>他社AA出品のため</fullName>
            </value>
            <value>
                <fullName>月内自社出品のため</fullName>
            </value>
            <value>
                <fullName>不足書類開封のため</fullName>
            </value>
            <value>
                <fullName>リユース案件振込のため</fullName>
            </value>
            <value>
                <fullName>書類不備のため</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>