force-app/main/default/objects/Document_management__c/fields/document_ok_change_approved__c.field-meta.xml
<CustomField>
    <fullName>document_ok_change_approved__c</fullName>
    <description>買取商談の「計上月変更依頼承認済み」を表示</description>
    <formula>Opportunity_DocManagement__r.document_ok_change_approved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>計上月変更依頼承認済み</label>
    <type>Checkbox</type>
</CustomField>