force-app/main/default/objects/Document_management__c/fields/LotNo__c.field-meta.xml
<CustomField>
    <fullName>LotNo__c</fullName>
    <label>ロット番号（旧）</label>
    <length>10</length>
    <type>Text</type>
</CustomField>