force-app/main/default/objects/Document_management__c/fields/LotNo_Formula__c.field-meta.xml
<CustomField>
    <fullName>LotNo_Formula__c</fullName>
    <formula>IF(NOT(ISBLANK( Opportunity_DocManagement__c )), Opportunity_DocManagement__r.Lot_CorporationID__c ,  Case__r.LOT__c  )</formula>
    <label>ロット番号</label>
    <type>Text</type>
</CustomField>