force-app/main/default/objects/Document_management__c/fields/NewProcessingDivision__c.field-meta.xml
<CustomField>
    <fullName>NewProcessingDivision__c</fullName>
    <label>新処理区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>抹消</fullName>
            </value>
            <value>
                <fullName>抹消済</fullName>
            </value>
            <value>
                <fullName>輸出抹消</fullName>
            </value>
            <value>
                <fullName>名変</fullName>
            </value>
            <value>
                <fullName>中販名変</fullName>
            </value>
            <value>
                <fullName>直だし名変</fullName>
            </value>
            <value>
                <fullName>ソコトレ輸出抹消</fullName>
            </value>
            <value>
                <fullName>HMS名変</fullName>
                <isActive>false</isActive>
                <label>HMS名変</label>
            </value>
            <value>
                <fullName>HMS所変</fullName>
                <isActive>false</isActive>
                <label>HMS所変</label>
            </value>
            <value>
                <fullName>HMS抹消</fullName>
                <isActive>false</isActive>
                <label>HMS抹消</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>