force-app/main/default/objects/Document_management__c/fields/Next_confirmation_date__c.field-meta.xml
<CustomField>
    <fullName>Next_confirmation_date__c</fullName>
    <description>長谷川</description>
    <label>次回確認日</label>
    <type>Date</type>
</CustomField>