force-app/main/default/objects/Document_management__c/fields/Opportunity_DocManagement__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_DocManagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>買取商談</label>
    <referenceTo>PurchaseOpportunity__c</referenceTo>
    <relationshipLabel>書類管理依頼</relationshipLabel>
    <relationshipName>Opportunity_DocManagement</relationshipName>
    <type>Lookup</type>
</CustomField>