force-app/main/default/objects/Document_management__c/fields/Opportunity_owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>営業担当</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opp_DocManagement</relationshipName>
    <type>Lookup</type>
</CustomField>