force-app/main/default/objects/Document_management__c/fields/OwnerChangeRequest_Approved__c.field-meta.xml
<CustomField>
    <fullName>OwnerChangeRequest_Approved__c</fullName>
    <formula>IF ( NOT( ISBLANK( Opportunity_DocManagement__c ) ) , Opportunity_DocManagement__r.OwnerChangeRequest_Approved__c,   Case__r.OwnerChangeRequest_Approved__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車庫申請承認済み</label>
    <type>Checkbox</type>
</CustomField>