force-app/main/default/objects/Document_management__c/fields/PO_Account__c.field-meta.xml
<CustomField>
    <fullName>PO_Account__c</fullName>
    <description>山本</description>
    <formula>Opportunity_DocManagement__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO_Account</label>
    <type>Text</type>
</CustomField>