force-app/main/default/objects/Document_management__c/fields/ProcessingDivision__c.field-meta.xml
<CustomField>
    <fullName>ProcessingDivision__c</fullName>
    <label>使用不可_処理区分</label>
    <length>50</length>
    <type>Text</type>
</CustomField>