force-app/main/default/objects/Document_management__c/fields/ProcessingDivision_Formula__c.field-meta.xml
<CustomField>
    <fullName>ProcessingDivision_Formula__c</fullName>
    <description>山本</description>
    <formula>TEXT( Opportunity_DocManagement__r.ProcessingDivision__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>処理区分</label>
    <type>Text</type>
</CustomField>