force-app/main/default/objects/Document_management__c/fields/receipt_monthly__c.field-meta.xml
<CustomField>
    <fullName>receipt_monthly__c</fullName>
    <description>ダッシュボード等、検索条件で使用される。山本</description>
    <formula>MONTH(  Request_Date__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>依頼集計月度</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>