force-app/main/default/objects/Document_management__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <label>依頼内容</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>車庫申請</fullName>
            </value>
            <value>
                <fullName>現在登録証発行申請</fullName>
            </value>
            <value>
                <fullName>月内手続き依頼</fullName>
            </value>
            <value>
                <fullName>処理区分変更依頼</fullName>
            </value>
            <value>
                <fullName>自賠名変依頼</fullName>
            </value>
            <value>
                <fullName>取メン保保管依頼</fullName>
            </value>
            <value>
                <fullName>中販名変後のナンバー発送先変更依頼</fullName>
            </value>
            <value>
                <fullName>開封依頼</fullName>
            </value>
            <value>
                <fullName>【本部長承認要】計上月変更依頼</fullName>
            </value>
            <value>
                <fullName>その他問い合わせ</fullName>
            </value>
            <value>
                <fullName>書類OK日変更依頼</fullName>
                <isActive>false</isActive>
                <label>書類OK日変更依頼</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>