force-app/main/default/objects/Document_management__c/fields/Request_completedate__c.field-meta.xml
<CustomField>
    <fullName>Request_completedate__c</fullName>
    <label>依頼完了日</label>
    <type>Date</type>
</CustomField>