force-app/main/default/objects/Document_management__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <label>依頼日</label>
    <type>Date</type>
</CustomField>