force-app/main/default/objects/Document_management__c/fields/Request_to_DocManagement_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Request_to_DocManagement_Remarks__c</fullName>
    <label>その他・備考</label>
    <type>TextArea</type>
</CustomField>