force-app/main/default/objects/Document_management__c/fields/Request_to_DocManagement_Scan__c.field-meta.xml
<CustomField>
    <fullName>Request_to_DocManagement_Scan__c</fullName>
    <label>画像スキャン</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>未</fullName>
            </value>
            <value>
                <fullName>済</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>