force-app/main/default/objects/Document_management__c/fields/requesting_department__c.field-meta.xml
<CustomField>
    <fullName>requesting_department__c</fullName>
    <label>依頼部署</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>販売</fullName>
            </value>
            <value>
                <fullName>物流</fullName>
            </value>
            <value>
                <fullName>経理</fullName>
            </value>
            <value>
                <fullName>貿易</fullName>
            </value>
            <value>
                <fullName>MVR</fullName>
            </value>
            <value>
                <fullName>書類管理</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>