force-app/main/default/objects/Document_management__c/fields/RequestTallyingMonth__c.field-meta.xml
<CustomField>
    <fullName>RequestTallyingMonth__c</fullName>
    <description>山本</description>
    <formula>MONTH( Request_Date__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>依頼集計月度</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>