force-app/main/default/objects/Document_management__c/fields/SalesManagement__c.field-meta.xml
<CustomField>
    <fullName>SalesManagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>山本</description>
    <label>営業管理</label>
    <referenceTo>SalesManagement__c</referenceTo>
    <relationshipLabel>書類管理依頼</relationshipLabel>
    <relationshipName>Document_management_sm</relationshipName>
    <type>Lookup</type>
</CustomField>