force-app/main/default/objects/Document_management__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Request__c</columns>
    <columns>LotNo_Formula__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Request_completedate__c</columns>
    <columns>DocManagement_Name__c</columns>
    <columns>Opportunity_owner__c</columns>
    <columns>cancel__c</columns>
    <columns>Docmgmt_memo__c</columns>
    <columns>Opportunity_DocManagement__c</columns>
    <columns>Case__c</columns>
    <columns>Car_model__c</columns>
    <columns>Car_No__c</columns>
    <columns>Request_to_DocManagement_Remarks__c</columns>
    <columns>CancelDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>