force-app/main/default/objects/Document_management__c/listViews/closed_document_ok_change_request.listView-meta.xml
<ListView>
    <fullName>closed_document_ok_change_request</fullName>
    <columns>NAME</columns>
    <columns>Request__c</columns>
    <columns>LotNo_Formula__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Request_completedate__c</columns>
    <columns>Docmgmt_memo__c</columns>
    <columns>Request_to_DocManagement_Remarks__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Opportunity_DocManagement__c</columns>
    <columns>Opportunity_owner__c</columns>
    <columns>Car_model__c</columns>
    <columns>Car_No__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>document_ok_change_approved__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Request__c</field>
        <operation>equals</operation>
        <value>【本部長承認要】計上月変更依頼</value>
    </filters>
    <filters>
        <field>Request_completedate__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Request_to_DocManagement_Remarks__c</field>
        <operation>notContain</operation>
        <value>テスト</value>
    </filters>
    <label>完了済みの計上月変更依頼</label>
</ListView>