force-app/main/default/objects/Document_management__c/listViews/Incomplete_Automobile_Inspection_Application.listView-meta.xml
<ListView>
    <fullName>Incomplete_Automobile_Inspection_Application</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_owner__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Urgent__c</columns>
    <columns>AutomobileInspectionApplication_Approved__c</columns>
    <columns>DesiredDeliverTime__c</columns>
    <columns>Docmgmt_memo__c</columns>
    <columns>Opportunity_DocManagement__c</columns>
    <columns>Model_year__c</columns>
    <columns>Car_No__c</columns>
    <columns>Car_model__c</columns>
    <columns>Request_to_DocManagement_Remarks__c</columns>
    <columns>DocManagement_Name__c</columns>
    <columns>Request_completedate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request__c</field>
        <operation>equals</operation>
        <value>現在登録証発行申請</value>
    </filters>
    <filters>
        <field>Request_completedate__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>cancel__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CancelDate__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Request_to_DocManagement_Remarks__c</field>
        <operation>notContain</operation>
        <value>テスト</value>
    </filters>
    <label>未完了の現在登録証発行申請依頼</label>
</ListView>