force-app/main/default/objects/Document_management__c/listViews/Incomplete_Other_Inquiries_DocManagement.listView-meta.xml
<ListView>
    <fullName>Incomplete_Other_Inquiries_DocManagement</fullName>
    <columns>NAME</columns>
    <columns>LotNo_Formula__c</columns>
    <columns>Opportunity_owner__c</columns>
    <columns>Opportunity_DocManagement__c</columns>
    <columns>Request_Date__c</columns>
    <columns>DesiredDeliverTime__c</columns>
    <columns>Next_confirmation_date__c</columns>
    <columns>DocManagement_Name__c</columns>
    <columns>Docmgmt_memo__c</columns>
    <columns>DeliveryCompany__c</columns>
    <columns>TrackingNumber__c</columns>
    <columns>DeliverySource__c</columns>
    <columns>Request_to_DocManagement_Remarks__c</columns>
    <columns>Car_model__c</columns>
    <columns>Request_completedate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request__c</field>
        <operation>equals</operation>
        <value>開封依頼,その他問い合わせ</value>
    </filters>
    <filters>
        <field>Request_completedate__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>cancel__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CancelDate__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>PO_Account__c</field>
        <operation>notEqual</operation>
        <value>センリャク テスト</value>
    </filters>
    <label>未完了のその他問い合わせ</label>
</ListView>