force-app/main/default/objects/Document_management__c/listViews/Incomplete_Reqest_MonthlyProcedure.listView-meta.xml
<ListView>
    <fullName>Incomplete_Reqest_MonthlyProcedure</fullName>
    <columns>NAME</columns>
    <columns>LotNo_Formula__c</columns>
    <columns>Opportunity_owner__c</columns>
    <columns>Opportunity_DocManagement__c</columns>
    <columns>Mst_Models_formula__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Request_completedate__c</columns>
    <columns>Car_No__c</columns>
    <columns>ProcessingDivision_Formula__c</columns>
    <columns>Docmgmt_memo__c</columns>
    <columns>TrackingNumber__c</columns>
    <columns>DeliveryCompany__c</columns>
    <columns>DeliverySource__c</columns>
    <columns>DesiredDeliverTime__c</columns>
    <columns>document_ok_change_approved__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request__c</field>
        <operation>equals</operation>
        <value>月内手続き依頼</value>
    </filters>
    <filters>
        <field>Request_completedate__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>cancel__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CancelDate__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Request_to_DocManagement_Remarks__c</field>
        <operation>notContain</operation>
        <value>テスト</value>
    </filters>
    <label>未完了の月内手続き申請依頼</label>
</ListView>